kubernetes/ingress-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p-ingress
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: eks.keresifon.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80
            path: /
